recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: ':' expected but '(' found.
current(steps) 
       ^Tree:26: error: identifier expected but '}' found.
}
^Tree:31: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:45: error: expected start of definition
	override def run() {
                 ^Tree:49: error: Unmatched closing brace '}' ignored here
}
^