recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
def subtree( 
current(steps) 
avance(length)
droite(angle)	
tree(steps-1, length*shrink, angle:Double, shrink:Double)
if (step==0) {
			return  } 
	
	else {	
		
		
		avance(length); 
			droite(angle)
			avance(length*shrink)
			
			
			
			
			}


	
	
}
}

